Added LSTM extrapolation demo

--- a/Training/0.preprocess.ipynb
+++ b/Training/0.preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,63 +36,64 @@
    ],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout, Bidirectional, TimeDistributed, RepeatVector\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "# Configuration\n",
     "base_dir = r'E:\\Khóa luận\\Data\\Phase 2'\n",
-    "export_plot_dir = r'E:\\Khóa luận\\Exports\\Processed'\n",
-    "os.makedirs(export_plot_dir, exist_ok=True)\n",
+    "export_dir = r'E:\\Khóa luận\\Exports\\Processed'\n",
+    "os.makedirs(export_dir, exist_ok=True)\n",
     "\n",
-    "input_files = {\n",
-    "    '250500': os.path.join(base_dir, '250500.csv'),\n",
-    "    '500500': os.path.join(base_dir, '500500.csv'),\n",
-    "    '750500': os.path.join(base_dir, '750500.csv')\n",
-    "}\n",
+    "# Parameters\n",
+    "target_col = 'CH4RAWppm'  # Target variable to predict\n",
+    "window_size = 72          # Lookback window (3 days at hourly resolution)\n",
+    "forecast_horizon = 24     # Predict next 24 hours (1 day)\n",
+    "batch_size = 64\n",
+    "epochs = 200\n",
     "\n",
-    "for label, file_path in input_files.items():\n",
-    "    print(f\"\\n===== Đang xử lý nồng độ {label} =====\")\n",
+    "# Data loading with your preprocessing\n",
+    "def load_and_preprocess(file_path):\n",
     "    df = pd.read_csv(file_path, sep=';', encoding='utf-8', low_memory=False)\n",
-    "    print(f\"Số dòng ban đầu: {len(df)}\")\n",
-    "\n",
-    "    # 1. Kiểm tra trùng lặp, kiểu dữ liệu không nhất quán, giá trị không thể\n",
+    "    \n",
+    "    # Basic preprocessing\n",
     "    df = df.drop_duplicates()\n",
-    "    print(f\"Số dòng sau khi loại trùng lặp: {len(df)}\")\n",
-    "    # Chuyển các cột số sang numeric, cột thời gian sang datetime\n",
     "    if 'Date time' in df.columns:\n",
     "        df['Date time'] = pd.to_datetime(df['Date time'], errors='coerce')\n",
-    "    numerical_cols = [col for col in df.columns if col not in ['Timestamp', 'Date time'] and pd.api.types.is_numeric_dtype(pd.to_numeric(df[col], errors='coerce'))]\n",
+    "    \n",
+    "    # Handle numerical columns\n",
+    "    numerical_cols = [col for col in df.columns if col not in ['Timestamp', 'Date time'] \n",
+    "                     and pd.api.types.is_numeric_dtype(pd.to_numeric(df[col], errors='coerce'))]\n",
+    "    \n",
     "    for col in numerical_cols:\n",
     "        df[col] = pd.to_numeric(df[col], errors='coerce')\n",
-    "        # Loại bỏ giá trị âm\n",
     "        df.loc[df[col] < 0, col] = np.nan\n",
-    "\n",
-    "    # 2. Xử lý giá trị thiếu, toàn 0\n",
-    "    nan_counts = df.isna().sum()\n",
-    "    zero_counts = (df[numerical_cols] == 0).sum()\n",
-    "    # Điền thiếu (nội suy, ffill, bfill, median)\n",
-    "    for col in numerical_cols:\n",
+    "        \n",
+    "        # Fill missing values\n",
     "        df[col] = df[col].interpolate(method='linear', limit_direction='both')\n",
     "        df[col] = df[col].ffill().bfill()\n",
     "        df[col] = df[col].fillna(df[col].median())\n",
-    "    # Loại bỏ cột có >50% giá trị thiếu/toàn 0\n",
+    "    \n",
+    "    # Remove columns with >50% missing/zeros\n",
     "    threshold = 0.5\n",
-    "    cols_to_drop = []\n",
-    "    for col in numerical_cols:\n",
-    "        missing_ratio = nan_counts[col] / len(df)\n",
-    "        zero_ratio = (df[col] == 0).sum() / len(df)\n",
-    "        if missing_ratio > threshold or zero_ratio > threshold:\n",
-    "            cols_to_drop.append(col)\n",
+    "    cols_to_drop = [col for col in numerical_cols \n",
+    "                   if (df[col].isna().sum()/len(df) > threshold) \n",
+    "                   or ((df[col] == 0).sum()/len(df) > threshold]\n",
+    "    \n",
     "    if cols_to_drop:\n",
-    "        print(f\"Các cột bị loại bỏ do quá nhiều thiếu/0: {cols_to_drop}\")\n",
     "        df = df.drop(columns=cols_to_drop)\n",
     "        numerical_cols = [col for col in numerical_cols if col not in cols_to_drop]\n",
-    "\n",
-    "    # 3. Xử lý ngoại lai (outlier) bằng IQR\n",
+    "    \n",
+    "    # Outlier handling\n",
     "    for col in numerical_cols:\n",
     "        Q1 = df[col].quantile(0.25)\n",
     "        Q3 = df[col].quantile(0.75)\n",
@@ -100,128 +101,139 @@
     "        lower = Q1 - 1.5 * IQR\n",
     "        upper = Q3 + 1.5 * IQR\n",
     "        df.loc[(df[col] < lower) | (df[col] > upper), col] = np.nan\n",
-    "        # Điền lại giá trị thiếu sau khi loại outlier\n",
     "        df[col] = df[col].interpolate(method='linear', limit_direction='both')\n",
     "        df[col] = df[col].ffill().bfill()\n",
     "        df[col] = df[col].fillna(df[col].median())\n",
-    "\n",
-    "    # 4. Biến đổi thành stationary (differencing)\n",
+    "    \n",
+    "    # Make stationary\n",
     "    for col in numerical_cols:\n",
     "        df[col] = df[col].diff().fillna(0)\n",
+    "    \n",
+    "    # Final cleanup\n",
+    "    cols_all_zero = [col for col in numerical_cols if (df[col] == 0).all()]\n",
+    "    if cols_all_zero:\n",
+    "        df = df.drop(columns=cols_all_zero)\n",
+    "        numerical_cols = [col for col in numerical_cols if col not in cols_all_zero]\n",
+    "    \n",
+    "    return df, numerical_cols\n",
     "\n",
-    "    # 5. Loại bỏ cột toàn 0/toàn NaN sau differencing\n",
-    "    cols_all_zero_or_nan = [col for col in numerical_cols if df[col].isna().all() or (df[col] == 0).all()]\n",
-    "    if cols_all_zero_or_nan:\n",
-    "        print(f\"Các cột bị loại bỏ sau differencing: {cols_all_zero_or_nan}\")\n",
-    "        df = df.drop(columns=cols_all_zero_or_nan)\n",
-    "        numerical_cols = [col for col in numerical_cols if col not in cols_all_zero_or_nan]\n",
+    "# Sequence creation\n",
+    "def create_sequences(data, target, window, horizon):\n",
+    "    X, y = [], []\n",
+    "    for i in range(len(data) - window - horizon + 1):\n",
+    "        X.append(data[i:i+window])\n",
+    "        y.append(target[i+window:i+window+horizon])\n",
+    "    return np.array(X), np.array(y)\n",
     "\n",
-    "    # 6. Chuẩn hóa dữ liệu\n",
-    "    if len(numerical_cols) > 0:\n",
-    "        scaler = StandardScaler()\n",
-    "        df[numerical_cols] = scaler.fit_transform(df[numerical_cols])\n",
+    "# Main training loop\n",
+    "results = []\n",
+    "input_files = {\n",
+    "    '250500': os.path.join(base_dir, '250500.csv'),\n",
+    "    '500500': os.path.join(base_dir, '500500.csv'),\n",
+    "    '750500': os.path.join(base_dir, '750500.csv')\n",
+    "}\n",
     "\n",
-    "    # 7. Lưu dữ liệu đã xử lý\n",
-    "    export_path = os.path.join(export_plot_dir, f\"{label}_processed.csv\")\n",
-    "    df.to_csv(export_path, index=False)\n",
-    "    print(f\"Đã xuất dữ liệu đã tiền xử lý ra: {export_path}\")\n",
+    "for label, file_path in input_files.items():\n",
+    "    print(f\"\\n===== Processing {label} =====\")\n",
+    "    \n",
+    "    # Load and preprocess\n",
+    "    df, numerical_cols = load_and_preprocess(file_path)\n",
+    "    \n",
+    "    if target_col not in numerical_cols:\n",
+    "        print(f\"Target column {target_col} not found in {label}\")\n",
+    "        continue\n",
+    "    \n",
+    "    # Scale data\n",
+    "    scaler = StandardScaler()\n",
+    "    scaled_values = scaler.fit_transform(df[[target_col]])\n",
+    "    \n",
+    "    # Create sequences\n",
+    "    X, y = create_sequences(scaled_values, scaled_values, window_size, forecast_horizon)\n",
+    "    \n",
+    "    # Train-test split\n",
+    "    split_idx = int(0.8 * len(X))\n",
+    "    X_train, y_train = X[:split_idx], y[:split_idx]\n",
+    "    X_test, y_test = X[split_idx:], y[split_idx:]\n",
+    "    \n",
+    "    # Build model\n",
+    "    model = Sequential([\n",
+    "        Bidirectional(LSTM(128, return_sequences=True), \n",
+    "                     input_shape=(window_size, 1)),\n",
+    "        Dropout(0.3),\n",
+    "        Bidirectional(LSTM(64)),\n",
+    "        Dropout(0.2),\n",
+    "        Dense(64, activation='relu'),\n",
+    "        Dense(forecast_horizon)\n",
+    "    ])\n",
+    "    \n",
+    "    model.compile(optimizer=Adam(learning_rate=0.001),\n",
+    "                 loss='mse',\n",
+    "                 metrics=['mae'])\n",
+    "    \n",
+    "    # Callbacks\n",
+    "    callbacks = [\n",
+    "        EarlyStopping(patience=15, restore_best_weights=True),\n",
+    "        ModelCheckpoint(os.path.join(export_dir, f'best_model_{label}.h5'), \n",
+    "                        save_best_only=True)\n",
+    "    ]\n",
+    "    \n",
+    "    # Train\n",
+    "    history = model.fit(\n",
+    "        X_train, y_train,\n",
+    "        epochs=epochs,\n",
+    "        batch_size=batch_size,\n",
+    "        validation_split=0.2,\n",
+    "        callbacks=callbacks,\n",
+    "        verbose=1\n",
+    "    )\n",
+    "    \n",
+    "    # Evaluate\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    \n",
+    "    # Inverse scaling\n",
+    "    y_test_orig = np.array([scaler.inverse_transform(seq.reshape(-1, 1)).flatten() \n",
+    "                          for seq in y_test])\n",
+    "    y_pred_orig = np.array([scaler.inverse_transform(seq.reshape(-1, 1)).flatten() \n",
+    "                          for seq in y_pred])\n",
+    "    \n",
+    "    # Calculate metrics\n",
+    "    r2 = r2_score(y_test_orig.flatten(), y_pred_orig.flatten())\n",
+    "    mae = mean_absolute_error(y_test_orig.flatten(), y_pred_orig.flatten())\n",
+    "    rmse = np.sqrt(mean_squared_error(y_test_orig.flatten(), y_pred_orig.flatten()))\n",
+    "    \n",
+    "    results.append({\n",
+    "        'Concentration': label,\n",
+    "        'R2': r2,\n",
+    "        'MAE': mae,\n",
+    "        'RMSE': rmse\n",
+    "    })\n",
+    "    \n",
+    "    # Visualization\n",
+    "    plt.figure(figsize=(15, 6))\n",
+    "    for i in range(3):  # Plot 3 samples\n",
+    "        plt.subplot(3, 1, i+1)\n",
+    "        plt.plot(y_test_orig[i], label='Actual')\n",
+    "        plt.plot(y_pred_orig[i], label='Predicted')\n",
+    "        plt.title(f'Sample {i+1} - {label}')\n",
+    "        plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(os.path.join(export_dir, f'predictions_{label}.png'))\n",
+    "    plt.close()\n",
+    "    \n",
+    "    # Plot training history\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(history.history['loss'], label='Train Loss')\n",
+    "    plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "    plt.title(f'Training History - {label}')\n",
+    "    plt.legend()\n",
+    "    plt.savefig(os.path.join(export_dir, f'training_history_{label}.png'))\n",
+    "    plt.close()\n",
     "\n",
-    "    # ========== TRỰC QUAN HÓA ==========\n",
-    "    export_dir = export_plot_dir  # dùng chung thư mục export\n",
-    "\n",
-    "    # Violinplot\n",
-    "    if len(numerical_cols) > 0:\n",
-    "        plt.figure(figsize=(max(10, len(numerical_cols)*1.2), 6))\n",
-    "        sns.violinplot(data=df[numerical_cols], inner='box', cut=0)\n",
-    "        plt.title(f'Violinplot tất cả biến số - Nồng độ {label}')\n",
-    "        plt.xticks(rotation=45, ha='right')\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(os.path.join(export_dir, f'violinplot_all_{label}.png'))\n",
-    "        plt.close()\n",
-    "    else:\n",
-    "        print(f\"[CẢNH BÁO] Không có biến số nào để vẽ violinplot cho nồng độ {label}.\")\n",
-    "\n",
-    "    # Boxplot\n",
-    "    if len(numerical_cols) > 0:\n",
-    "        plt.figure(figsize=(max(10, len(numerical_cols)*1.2), 6))\n",
-    "        sns.boxplot(data=df[numerical_cols])\n",
-    "        plt.title(f'Boxplot tất cả biến số - Nồng độ {label}')\n",
-    "        plt.xticks(rotation=45, ha='right')\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(os.path.join(export_dir, f'boxplot_all_{label}.png'))\n",
-    "        plt.close()\n",
-    "    else:\n",
-    "        print(f\"[CẢNH BÁO] Không có biến số nào để vẽ boxplot cho nồng độ {label}.\")\n",
-    "\n",
-    "    # Histogram (subplots)\n",
-    "    if len(numerical_cols) > 0:\n",
-    "        n_cols = 4\n",
-    "        n_rows = int(np.ceil(len(numerical_cols)/n_cols))\n",
-    "        fig, axes = plt.subplots(n_rows, n_cols, figsize=(n_cols*4, n_rows*3))\n",
-    "        axes = axes.flatten()\n",
-    "        for i, col in enumerate(numerical_cols):\n",
-    "            sns.histplot(df[col], bins=30, kde=True, ax=axes[i], color='steelblue')\n",
-    "            axes[i].set_title(col)\n",
-    "        for j in range(i+1, len(axes)):\n",
-    "            axes[j].axis('off')\n",
-    "        plt.suptitle(f'Histogram các biến số - Nồng độ {label}', fontsize=16)\n",
-    "        plt.tight_layout(rect=[0, 0, 1, 0.97])\n",
-    "        plt.savefig(os.path.join(export_dir, f'histogram_all_{label}.png'))\n",
-    "        plt.close()\n",
-    "    else:\n",
-    "        print(f\"[CẢNH BÁO] Không có biến số nào để vẽ histogram cho nồng độ {label}.\")\n",
-    "\n",
-    "    # Heatmap tương quan\n",
-    "    if len(numerical_cols) > 1:\n",
-    "        plt.figure(figsize=(max(8, len(numerical_cols)), max(6, len(numerical_cols)*0.6)))\n",
-    "        corr = df[numerical_cols].corr()\n",
-    "        sns.heatmap(corr, annot=True, fmt=\".2f\", cmap='coolwarm', cbar=True)\n",
-    "        plt.title(f'Heatmap ma trận tương quan - Nồng độ {label}')\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(os.path.join(export_dir, f'corr_heatmap_{label}.png'))\n",
-    "        plt.close()\n",
-    "    else:\n",
-    "        print(f\"[CẢNH BÁO] Không đủ biến số để vẽ heatmap tương quan cho nồng độ {label}.\")\n",
-    "\n",
-    "    # Biểu đồ missing/zero barplot\n",
-    "    if len(numerical_cols) > 0:\n",
-    "        nan_counts = df[numerical_cols].isna().sum()\n",
-    "        zero_counts = (df[numerical_cols] == 0).sum()\n",
-    "        missing_df = pd.DataFrame({\n",
-    "            'missing': nan_counts,\n",
-    "            'zero': zero_counts\n",
-    "        })\n",
-    "        missing_df['total'] = missing_df['missing'] + missing_df['zero']\n",
-    "        missing_df = missing_df.sort_values('total', ascending=False)\n",
-    "        plt.figure(figsize=(max(8, len(numerical_cols)*0.7), 5))\n",
-    "        missing_df[['missing', 'zero']].plot(kind='bar', stacked=True, ax=plt.gca(), color=['#FFA07A', '#87CEFA'])\n",
-    "        plt.title(f'Số lượng giá trị thiếu và bằng 0 trên từng biến số - Nồng độ {label}')\n",
-    "        plt.ylabel('Số lượng')\n",
-    "        plt.xlabel('Tên biến')\n",
-    "        plt.xticks(rotation=45, ha='right')\n",
-    "        plt.tight_layout()\n",
-    "        plt.savefig(os.path.join(export_dir, f'missing_and_zero_{label}.png'))\n",
-    "        plt.close()\n",
-    "    else:\n",
-    "        print(f\"[CẢNH BÁO] Không có biến số nào để vẽ missing/zero barplot cho nồng độ {label}.\")\n",
-    "\n",
-    "    # Time series plot cho 3 biến đầu tiên (nếu có Date time)\n",
-    "    if 'Date time' in df.columns and len(numerical_cols) > 0:\n",
-    "        for col in numerical_cols[:3]:\n",
-    "            if df[col].nunique(dropna=True) < 2 or df[col].dropna().empty:\n",
-    "                continue\n",
-    "            plt.figure(figsize=(12, 4))\n",
-    "            plt.plot(df['Date time'], df[col], label=col)\n",
-    "            plt.title(f'Chuỗi thời gian của {col} - Nồng độ {label}')\n",
-    "            plt.xlabel('Thời gian')\n",
-    "            plt.ylabel(col)\n",
-    "            plt.tight_layout()\n",
-    "            plt.savefig(os.path.join(export_dir, f'timeseries_{col}_{label}.png'))\n",
-    "            plt.close()\n",
-    "    elif 'Date time' in df.columns:\n",
-    "        print(f\"[CẢNH BÁO] Không có biến số nào hợp lệ để vẽ time series cho nồng độ {label}.\")\n",
-    "\n",
-    "print(f\"\\nĐã xử lý và lưu toàn bộ biểu đồ cho các nồng độ vào: {export_plot_dir}\")"
+    "# Save results\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(\"\\nFinal Results:\")\n",
+    "print(results_df)\n",
+    "results_df.to_csv(os.path.join(export_dir, 'model_results.csv'), index=False)"
    ]
   }
  ],
